--- a/components/CorporateSupport/CorporateSupport.module.scss
+++ b/components/CorporateSupport/CorporateSupport.module.scss
@@ -29,11 +29,10 @@
     .iButton {
       width: 25px;
       height: 25px;
-      text-align: center;
       position: absolute;
       font-size: 1.2rem;
-      top: 6%;
-      left: 82.5%;
+      top: 0.9rem;
+      margin-left: 72%;
       cursor: pointer;
       // color: black;
     }
@@ -48,7 +47,7 @@
     }
 
     // 4% and 120%
-    clip-path: circle(4% at 86% 10%);
+    clip-path: circle(6% at 86% 10%);
   }
 }
 .reach {
