Website revamp and content cleanup

--- a/components/Hero/Hero.module.scss
+++ b/components/Hero/Hero.module.scss
@@ -7,6 +7,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding-top: 80px;
   font-family: 'Oswald', sans-serif;
   .heroHead {
     font-size: 4.6rem;
@@ -122,6 +123,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding-top: 80px;
 
     background-position: center;
     background-repeat: no-repeat;
