--- a/components/HomeAboutUs/HomeAboutUs.module.scss
+++ b/components/HomeAboutUs/HomeAboutUs.module.scss
@@ -2,25 +2,30 @@
 
 .aboutUs {
   width: 100%;
+
   // background-color: rgb(49, 49, 49);
   .aboutUsMain {
-    width: 100%;
-    background-image: linear-gradient(#00000081, #00000081),
-      url('/static/images/aboutus-final.jpg');
+    width: 90%;
+    margin: 2rem auto;
+    @include tech-card;
+    // background-image: linear-gradient(#00000081, #00000081),
+    //   url('/static/images/aboutus-final.jpg');
     min-height: 60vh;
     padding: 7em 0.5em;
-    background-position: center;
-    background-size: cover;
+    // background-position: center;
+    // background-size: cover;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     font-family: 'Oswald', sans-serif;
     color: white;
+
     h1 {
       font-size: 3rem;
       // color: $lightest;
     }
+
     p {
       font-family: sans-serif;
       font-size: 1.1rem;
@@ -37,6 +42,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+
     img {
       width: 50%;
       // height: 50vh;
@@ -67,12 +73,15 @@
     .aboutUsMain {
       padding: 3em 0.5em;
     }
+
     .aboutUsTeam,
     .aboutUsAlumni {
       flex-direction: column;
+
       p {
         padding: 3em 1em;
       }
+
       img {
         width: 100%;
       }
@@ -101,18 +110,21 @@
     padding: 1em;
     font-size: 3rem;
   }
+
   button {
     margin: 0.5em;
     font-size: 1.3rem;
     border: 2px solid white;
     padding: 0.7em 1em;
     transition: all 0.2s;
+
     &:hover {
       border-radius: 5px;
       border-color: $lightest;
       color: $lightest;
     }
   }
+
   &:hover {
     h1 {
       color: $light;
@@ -123,6 +135,7 @@
     h1 {
       font-size: 2rem;
     }
+
     button {
       font-size: 1.2rem;
     }
