--- a/components/OurCorporates/OurCorporates.module.scss
+++ b/components/OurCorporates/OurCorporates.module.scss
@@ -1,28 +1,57 @@
+@import '../variables';
+
 .reach {
+  width: 90%;
+  margin: 2rem auto;
+  @include tech-card;
+  padding: 2rem;
+
   h1 {
     margin: 50px 0 20px;
     text-align: center;
     font-size: 2.5rem;
     font-family: 'Oswald', sans-serif;
   }
+
   .reachGroup {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    justify-items: center;
     align-items: center;
-    justify-content: space-evenly;
+    /* Added to center items vertically */
+    gap: 2em;
     padding: 0 1em;
+    margin-bottom: 50px;
+
     img {
-      margin: 1.5em;
+      margin: 0;
       width: 150px;
       transition: transform 0.2s;
+
       &:hover {
         transform: scale(1.1);
       }
 
+      @media (max-width: 1024px) {
+        width: 130px;
+      }
+
       @media (max-width: 650px) {
-        margin: 0.5em;
         width: 100px;
       }
+    }
+
+    @media (max-width: 1200px) {
+      grid-template-columns: repeat(4, 1fr);
+    }
+
+    @media (max-width: 768px) {
+      grid-template-columns: repeat(3, 1fr);
+    }
+
+    @media (max-width: 480px) {
+      grid-template-columns: repeat(2, 1fr);
+      gap: 1em;
     }
   }
 }
