--- a/components/OurSponsors/OurSponsors.module.scss
+++ b/components/OurSponsors/OurSponsors.module.scss
@@ -1,20 +1,32 @@
+@import '../variables';
+
 .reach {
+  width: 90%;
+  margin: 4rem auto;
+  @include tech-card;
+  padding: 3rem 1rem;
+
   h1 {
-    margin: 50px 0 20px;
+    margin: 20px 0 50px;
     text-align: center;
     font-size: 2.5rem;
     font-family: 'Oswald', sans-serif;
+    color: #ffffff;
+    text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
   }
+
   .reachGroup {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-evenly;
     padding: 0 1em;
+
     img {
       margin: 1.5em;
       width: 150px;
       transition: transform 0.2s;
+
       &:hover {
         transform: scale(1.1);
       }
