--- a/components/Navbar/Navbar.module.scss
+++ b/components/Navbar/Navbar.module.scss
@@ -46,7 +46,8 @@
         background-color: rgba(255, 255, 255, 0.151);
 
         .sraLogo {
-          filter: grayscale(0) invert(0) brightness(1.2) sepia(1) hue-rotate(-30deg) saturate(5);
+          filter: grayscale(0) invert(0) brightness(1.2) sepia(1)
+            hue-rotate(-30deg) saturate(5);
         }
       }
 
