--- a/components/OurReach/HomeReach.module.scss
+++ b/components/OurReach/HomeReach.module.scss
@@ -27,6 +27,7 @@
 
       &:hover {
         transform: scale(1.1);
+        filter: drop-shadow(0 0 10px rgba(255, 255, 255, 0.6));
       }
 
       @media (max-width: 650px) {
